# dcc-mcp-mobu

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/dcc_mcp_mobu/: __init__.py  __version__.py  dispatcher.py  plugin.py  server.py
src/dcc_mcp_mobu/mobu_plugin/startup/: dcc_mcp_mobu.py
src/dcc_mcp_mobu/skills/mobu-scene/: SKILL.md  tools.yaml
src/dcc_mcp_mobu/skills/mobu-scene/scripts/: inspect_scene.py  list_models.py  save_scene.py
tests/: test_package.py
tools/: lint_skills.py
