[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-mobu"
version = "0.2.0"
description = "MCP adapter for Autodesk MotionBuilder"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "loonghao", email = "hal.long@outlook.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["dcc-mcp-core>=0.19.13"]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-mobu"
Repository = "https://github.com/dcc-mcp/dcc-mcp-mobu"
Issues = "https://github.com/dcc-mcp/dcc-mcp-mobu/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.8", "twine>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_mobu"]
artifacts = ["src/dcc_mcp_mobu/skills/**", "src/dcc_mcp_mobu/mobu_plugin/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
